@@ -29,3 +29,4 @@ depth: 1
  * Regression from Markdown conversion in documentation for API configuration - update to correctly use PEP-8 for example code (Storm Heg)
  * Prevent 'Delete' link on page edit view from redirecting back to the deleted page (LB (Ben) Johnston)
  * Prevent JS error on images index view when collections dropdown is omitted (Tidiane Dia)
+ * Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
